--- a/trunk/CS_Library/Providers/NavigationProviders/SolpartMenuNavigationProvider/Provider.SolpartMenuNavigationProvider.csproj
+++ b/trunk/CS_Library/Providers/NavigationProviders/SolpartMenuNavigationProvider/Provider.SolpartMenuNavigationProvider.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Web">
       <Name>System.Web</Name>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
