--- a/trunk/CS_Website/web.config
+++ b/trunk/CS_Website/web.config
@@ -21,25 +21,25 @@
 	<connectionStrings>
 		<!-- Connection String for SQL Server 2005 Express -->
 		<!--<add
-      name="SiteSqlServer"
+      name="SiteDataServer"
       connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|Database.mdf;"
       providerName="System.Data.SqlClient" />-->
 		<!-- Connection String for SQL Server 2000/2005 
     <add
-      name="SiteSqlServer"
+      name="SiteDataServer"
       connectionString="Server=(local);Database=DotNetNuke;uid=;pwd=;"
       providerName="System.Data.SqlClient" />
-    <add name="SiteSqlServer" connectionString="Server=localhost;Database=csdnn;uid=sa;pwd=sa;" providerName="System.Data.SqlClient" />
+    <add name="SiteDataServer" connectionString="Server=localhost;Database=csdnn;uid=sa;pwd=sa;" providerName="System.Data.SqlClient" />
     -->
-		<add name="SiteSqlServer" connectionString="server=.\SQLEXPRESS;Trusted_Connection=true;database=cs_dnn_dev" providerName="System.Data.SqlClient"/>
+		<add name="SiteDataServer" connectionString="server=.\SQLEXPRESS;Trusted_Connection=true;database=cs_dnn_dev" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
 		<!-- Connection String for SQL Server 2005 Express - kept for backwards compatability - legacy modules   -->
-		<!-- <add key="SiteSqlServer" value="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|Database.mdf;"/> -->
+		<!-- <add key="SiteDataServer" value="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|Database.mdf;"/> -->
 		<!-- Connection String for SQL Server 2000/2005 - kept for backwards compatability - legacy modules 
-    <add key="SiteSqlServer" value="Server=(local);Database=DotNetNukeCS;uid=;pwd=;" />
+    <add key="SiteDataServer" value="Server=(local);Database=DotNetNukeCS;uid=;pwd=;" />
     -->
-		<add key="SiteSqlServer" value="server=.\SQLEXPRESS;Trusted_Connection=true;database=cs_dnn_dev"/>
+		<add key="SiteDataServer" value="server=.\SQLEXPRESS;Trusted_Connection=true;database=cs_dnn_dev"/>
 		<add key="InstallTemplate" value="DotNetNuke.install.config"/>
 		<add key="AutoUpgrade" value="true"/>
 		<add key="InstallMemberRole" value="true"/>
@@ -84,37 +84,27 @@
 				<remove extension=".resources"/>
 			</buildProviders>
 			<assemblies>
-				<add assembly="Microsoft.VisualBasic, Version=8.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.DirectoryServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Management, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<!-- Additonal Assemblies 
+        <add assembly="System.DirectoryServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Management, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.Data.SqlXml, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Transactions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="Accessibility, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Drawing.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Runtime.Serialization.Formatters.Soap, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Web.RegularExpressions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-        -->
-				<add assembly="System.Data.SqlXml, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Transactions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies>
-			<!-- register your app_code subfolders to generate granular assemblies during compilation
+        <add assembly="System.Deployment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Transactions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>        
+        <add assembly="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+      </assemblies>
+      <!-- register your app_code subfolders to generate granular assemblies during compilation
       <codeSubDirectories> 
          <add directoryName="sub-directory name"/> 
       </codeSubDirectories>
       -->
-		</compilation>
-		<!-- permits errors to be displayed for remote clients -->
-		<customErrors mode="RemoteOnly"/>
-		<!-- Forms or Windows authentication -->
-		<authentication mode="Forms">
-			<forms name=".DOTNETNUKE" protection="All" timeout="60" cookieless="UseCookies"/>
+    </compilation>
+    <!-- permits errors to be displayed for remote clients -->
+    <customErrors mode="RemoteOnly"/>
+    <!-- Forms or Windows authentication -->
+    <authentication mode="Forms">
+      <forms name=".DOTNETNUKE" protection="All" timeout="60" cookieless="UseCookies"/>
 		</authentication>
 		<!--
 		    <identity impersonate="true"/>
@@ -187,7 +177,7 @@
               passwordFormat="[Clear|Hashed|Encrypted]"   Storage format for the password: Hashed (SHA1), Clear or Encrypted (Triple-DES)
               description="string"                        Description of what the provider does
         -->
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="SiteSqlServer" enablePasswordRetrieval="true" enablePasswordReset="true" requiresQuestionAndAnswer="false" minRequiredPasswordLength="7" minRequiredNonalphanumericCharacters="0" requiresUniqueEmail="false" passwordFormat="Encrypted" applicationName="DotNetNuke" description="Stores and retrieves membership data from the local Microsoft SQL Server database"/>
+				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="SiteDataServer" enablePasswordRetrieval="true" enablePasswordReset="true" requiresQuestionAndAnswer="false" minRequiredPasswordLength="7" minRequiredNonalphanumericCharacters="0" requiresUniqueEmail="false" passwordFormat="Encrypted" applicationName="DotNetNuke" description="Stores and retrieves membership data from the local Microsoft SQL Server database"/>
 			</providers>
 		</membership>
 	</system.web>
@@ -238,8 +228,9 @@
 		<data defaultProvider="SqlDataProvider">
 			<providers>
 				<clear/>
-				<add name="SqlDataProvider" type="DotNetNuke.Data.SqlDataProvider, DotNetNuke.SqlDataProvider" connectionStringName="SiteSqlServer" upgradeConnectionString="" providerPath="~\Providers\DataProviders\SqlDataProvider\" objectQualifier="dnn_" databaseOwner="dbo"/>
-			</providers>
+				<add name="SqlDataProvider" type="DotNetNuke.Data.SqlDataProvider, DotNetNuke.SqlDataProvider" connectionStringName="SiteDataServer" upgradeConnectionString="" providerPath="~\Providers\DataProviders\SqlDataProvider\" objectQualifier="dnn_" databaseOwner="dbo"/>
+        <add name="OracleDataProvider" type="DotNetNuke.Data.OracleDataProvider, DotNetNuke.OracleDataProvider" connectionStringName="SiteDataServer" upgradeConnectionString="" providerPath="~\Providers\DataProviders\OracleDataProvider\" objectQualifier="" databaseOwner=""/>
+      </providers>
 		</data>
 		<logging defaultProvider="DBLoggingProvider">
 			<providers>
